--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "apollo-boost": "^0.4.7",
+    "express": "^4.17.1",
     "graphql": "^14.5.8",
     "sirv-cli": "^0.4.4",
     "svelte-apollo": "^0.3.0"
